--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Expense Control</string>
-    <string name="title">Controla tus Gastos Mensuales</string>
+    <string name="title">Control de Gastos</string>
     <string-array name="categories">
         <item>Selecciona una categoría...</item>
         <item>Comida</item>
