--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
         <item>Comida</item>
         <item>Transporte</item>
         <item>Universidad</item>
+        <item>Familia</item>
+        <item>Trabajo</item>
+        <item>Viaje</item>
         <item>Fiesta</item>
     </string-array>
     <string-array name="opciones">
